# pyproject.toml

[project]
name = "wmeijer_utils"
version = "0.8.1"
description = "Contains a diverse set of utility methods I use in Python."
readme = 'README.md'
license = { file = 'LICENSE' }
authors = [{ email = "me@wmeijer.com", name = "wmeijer221" }]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
repository = 'https://github.com/wmeijer221/my_python_utils'


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = 'requirements-dev.txt' } }


[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
